--- a/web/webclient/package.json
+++ b/web/webclient/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "chart.js": "^2.7.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.3.14"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
