--- a/web/webclient/client/package.json
+++ b/web/webclient/client/package.json
@@ -9,7 +9,8 @@
     "react": "^16.5.2",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-scripts": "2.0.4",
+    "webpack-dev-server": "3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
