--- a/web/webclient/client/package.json
+++ b/web/webclient/client/package.json
@@ -10,6 +10,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
+    "serialize-javascript": "2.1.1",
     "webpack-dev-server": "3.1.11"
   },
   "scripts": {
